--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-debug-all</artifactId>
-            <version>[5.1,)</version>
+            <version>[5.2,)</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -30,6 +30,11 @@
             <groupId>com.linkedin.parseq</groupId>
             <artifactId>parseq</artifactId>
             <version>[2.3.5,)</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
         </dependency>
     </dependencies>
 
